<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/wathet">

        <ImageButton
            android:id="@+id/img_bar_left"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@mipmap/start"/>

        <TextView
            android:id="@+id/text_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:singleLine="true"
            android:text="@string/shock_measurement"
            android:textColor="@color/white"
            android:textSize="@dimen/main_normal_16"/>

        <ImageButton
            android:id="@+id/img_bar_right"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@mipmap/ok"
            android:visibility="visible"/>


    </RelativeLayout>

    <!--折线图-->
    <LinearLayout
        android:id="@+id/ll_shock_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_shock_chart"
        android:padding="15dp"
        android:text="@string/shock_curve"
        android:textSize="@dimen/main_large_30"/>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_shock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="32.226"
            android:textColor="@color/text_black"
            android:textSize="@dimen/main_large_60"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/displacement"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/gp_shock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_vhf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="高频"/>

                <RadioButton
                    android:id="@+id/rb_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="低频"/>
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_dash_line"
            android:layerType="software"/>

    </LinearLayout>


</RelativeLayout>